<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/blue"
    android:orientation="vertical"
    tools:context="com.marina_romanovna.decision_maker.QuestionsActivity">


    <TextView
        android:id="@+id/textHello"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="59dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="59dp"
        android:layout_marginBottom="561dp"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        android:text="@string/hello"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/editTextConditionOne"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:autofillHints="no"
        android:ems="10"
        android:hint="@string/condition1"
        android:inputType="textPersonName"
        android:textColor="@color/white"
        android:textColorHint="@android:color/tertiary_text_light"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.395"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/editTextConditionTwo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:autofillHints="no"
        android:ems="10"
        android:hint="@string/condition2"
        android:inputType="textPersonName"
        android:textColor="@color/white"
        android:textColorHint="@android:color/tertiary_text_light"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.625"
        tools:ignore="TextContrastCheck" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonResult"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="546dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="120dp"
        android:background="@drawable/rounded"
        android:fontFamily="sans-serif-medium"
        android:onClick="onClickButtonResult"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="@string/result"
        android:textColor="@color/white"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>