<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/blue"
    android:orientation="vertical"
    tools:context="com.marina_romanovna.decision_maker.ResultActivity">

    <TextView
        android:id="@+id/textAnswer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="17dp"
        android:layout_marginTop="119dp"
        android:layout_marginEnd="18dp"
        android:layout_marginBottom="559dp"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        android:text="@string/answer"
        android:textColor="@color/white"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textResult"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_marginStart="55dp"
        android:layout_marginTop="215dp"
        android:layout_marginEnd="56dp"
        android:layout_marginBottom="216dp"
        android:background="@drawable/rounded"
        android:gravity="center"
        android:text="@string/result"
        android:textColor="@color/white"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonBeginning"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="546dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="120dp"
        android:background="@drawable/rounded"
        android:fontFamily="sans-serif-medium"
        android:onClick="onClickButtonBeginning"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="@string/beginning"
        android:textColor="@color/white"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>